--- a/The_Brothers/.env
+++ b/The_Brothers/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL=http://localhost:5011
+# VITE_BACKEND_URL=http://localhost:5011
+VITE_BACKEND_URL=https://clothing-api-project-qada.onrender.com
