--- a/The_Brothers/.env
+++ b/The_Brothers/.env
@@ -1,3 +1,3 @@
-VITE_BACKEND_URL=http://localhost:5011
-# VITE_BACKEND_URL=https://clothing-project-api-pir6.onrender.com
+# VITE_BACKEND_URL=http://localhost:5011
+VITE_BACKEND_URL=https://clothing-project-api.onrender.com
 # VITE_BACKEND_URL=https://clothing-project-api-pir6.onrender.com
